@@ -12,6 +12,8 @@ Bug fixes:
   Eleison on <target>". It now recognizes the former when setting timeouts)
 - The Wx interface can now correctly launch a browser on Linux.
 - Fix display of map name in config.txt chat entries.
+- Sell all items at once instead of just 8 at a time.
+- skillsAddAuto was waiting a long time to add the next skill point.
 
 New features:
 - Don't use teleportAuto_minAggressives if the more specific
